--- a/transtornos.html
+++ b/transtornos.html
@@ -11,7 +11,7 @@
 
 </head>
 
-<body>
+<body class="pagina">
     <header id="cabeçalho">
         <div class="logoclass">
             <a href="index.html">
@@ -37,8 +37,8 @@
                         <h2 class="accordion-header">
                             <button class="accordion-button collapsed meu-accordion-botao-centralizado" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false"
-                                aria-controls="collapseOne" style="background-color: #037534; color: #ffffff;">
-                                Alzheimer
+                                aria-controls="collapseOne" style="background-color: #037534; color: #ffffff; font-family: 'parisine-bold'; border-radius: 15px; overflow: hidden; ">
+                                ALZHEIMER
                             </button>
                         </h2>
                         <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
@@ -93,8 +93,8 @@
                         <h2 class="accordion-header">
                             <button class="accordion-button collapsed meu-accordion-botao-centralizado" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
-                                aria-controls="collapseTwo" style="background-color: #037534; color: #ffffff;">
-                                Ansiedade
+                                aria-controls="collapseTwo" style="background-color: #037534; color: #ffffff; font-family: 'parisine-bold'; border-radius: 15px; overflow: hidden;">
+                                ANSIEDADE
                             </button>
                         </h2>
                         <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
@@ -151,8 +151,8 @@
                         <h2 class="accordion-header">
                             <button class="accordion-button collapsed meu-accordion-botao-centralizado" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false"
-                                aria-controls="collapseThree" style="background-color: #037534; color: #ffffff;">
-                                Autismo
+                                aria-controls="collapseThree" style="background-color: #037534; color: #ffffff; font-family: 'parisine-bold';  border-radius: 15px; overflow: hidden;">
+                                AUTISMO
                             </button>
                         </h2>
                         <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
@@ -207,8 +207,8 @@
                         <h2 class="accordion-header">
                             <button class="accordion-button collapsed meu-accordion-botao-centralizado" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false"
-                                aria-controls="collapseFour" style="background-color: #037534; color: #ffffff;">
-                                Burnout
+                                aria-controls="collapseFour" style="background-color: #037534; color: #ffffff; font-family: 'parisine-bold'; border-radius: 15px; overflow: hidden;">
+                                BURNOUT
                             </button>
                         </h2>
                         <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
@@ -257,8 +257,8 @@
                         <h2 class="accordion-header">
                             <button class="accordion-button collapsed meu-accordion-botao-centralizado" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#collapseEight" aria-expanded="false"
-                                aria-controls="collapseEight" style="background-color: #037534; color: #ffffff;">
-                                Depressão
+                                aria-controls="collapseEight" style="background-color: #037534; color: #ffffff; font-family: 'parisine-bold'; border-radius: 15px; overflow: hidden;">
+                                DEPRESSÃO
                             </button>
                         </h2>
                         <div id="collapseEight" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
@@ -318,8 +318,8 @@
                         <h2 class="accordion-header">
                             <button class="accordion-button collapsed meu-accordion-botao-centralizado" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false"
-                                aria-controls="collapseFive" style="background-color: #037534; color: #ffffff;">
-                                Sindrome do panico
+                                aria-controls="collapseFive" style="background-color: #037534; color: #ffffff; font-family: 'parisine-bold';  border-radius: 15px; overflow: hidden;">
+                                SÍNDROME DO PÂNICO
                             </button>
                         </h2>
                         <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
@@ -377,7 +377,7 @@
                         <h2 class="accordion-header">
                             <button class="accordion-button collapsed meu-accordion-botao-centralizado" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false"
-                                aria-controls="collapseSix" style="background-color: #037534; color: #ffffff;">
+                                aria-controls="collapseSix" style="background-color: #037534; color: #ffffff; font-family: 'parisine-bold';  border-radius: 15px; overflow: hidden;">
                                 TDAH
                             </button>
                         </h2>
@@ -434,7 +434,7 @@
                         <h2 class="accordion-header">
                             <button class="accordion-button collapsed meu-accordion-botao-centralizado" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#collapseSeven" aria-expanded="false"
-                                aria-controls="collapseSeven" style="background-color: #037534; color: #ffffff;">
+                                aria-controls="collapseSeven" style="background-color: #037534; color: #ffffff; font-family: 'parisine-bold'; border-radius: 15px; overflow: hidden;">
                                 TOC
                             </button>
                         </h2>
