--- a/canais.html
+++ b/canais.html
@@ -6,7 +6,7 @@
     <title>Psiconect</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
+<body class="pagina">
    
     <header>
         <div class="logoclass">
