--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="slide.js" defer></script>
 </head>
-<body>
+<body class="pagina">
     <header>
         <div class="logoclass">
             <a href="index.html">
